--- a/src/index.css
+++ b/src/index.css
@@ -12,17 +12,40 @@ code {
     monospace;
 }
 
+.vape {
+  display: flex;
+  justify-content: center;
+}
+
 .device {
   background-color: red;
+  padding-top: 100px;
+}
+
+.flexCol {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.deviceText {
+  margin-top: 250px;
 }
 
 .pod {
   background-color: black;
+  border-radius: 100px 100px 0 0;
+  padding: 50px;
 }
 
 .switch {
   border: 1px solid black;
   background-color: grey;
+  border-radius: 100px;
+  padding: 10%;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .vapeHighBattery {
@@ -37,4 +60,9 @@ code {
 
 .light {
   background-color: gainsboro;
+  border-radius: 100px;
+  padding: 10%;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 10px;
 }
