--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ code {
 
 .device {
   background-color: red;
-  padding-top: 100px;
+  padding-top: 150px;
 }
 
 .flexCol {
@@ -30,7 +30,7 @@ code {
 }
 
 .deviceText {
-  margin-top: 250px;
+  margin-top: 160px;
 }
 
 .pod {
@@ -40,10 +40,9 @@ code {
 }
 
 .switch {
-  border: 1px solid black;
-  background-color: grey;
+  background-color: black;
   border-radius: 100px;
-  padding: 10%;
+  padding: 20%;
   margin-left: 10px;
   margin-right: 10px;
 }
@@ -64,5 +63,5 @@ code {
   padding: 10%;
   margin-left: 20px;
   margin-right: 20px;
-  margin-bottom: 10px;
+  margin-top: 10px;
 }
