--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,7 @@ code {
 .light {
   background-color: gainsboro;
   border-radius: 100px;
+  border: 1px solid black;
   padding: 10%;
   margin-left: 20px;
   margin-right: 20px;
