--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,8 @@ code {
 .device {
   background-color: red;
   padding-top: 150px;
+  border-width: 10px;
+  border-style: none double none double;
 }
 
 .flexCol {
@@ -31,6 +33,9 @@ code {
 
 .deviceText {
   margin-top: 160px;
+  text-align: center;
+  text-shadow: 1px 1px 2px #c21d1d;
+  color: #660202;
 }
 
 .pod {
